applications/llm-pc-broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-pc-broker-service
  namespace: llm-pc-broker
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: llm-pc-broker
